Remove JsonStreamingJobRequest